# nice-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
service/: nice-client@.service
src/: api_common.rs  benchmark.rs  lib.rs  main.rs  nice_process.rs  process_integer.rs  process_natural.rs  residue.json  residue_filter.rs  tests.rs
src/api_com/: mod.rs
src/nice_com/: base_range.rs  mod.rs  residue_filter.rs
tests/: integration_test.rs
