[package]
name = "nice-rust"
version = "2.2.2"
authors = ["wasabipesto <nice@wasabipesto.com>"]
description = "a client for distributed search of square-cube pandigitals"
repository = "https://github.com/wasabipesto/nice-rust"
license-file = "LICENSE"

[[bin]]
name = "nice-rust"
path = "src/main.rs"

[lib]
name = "nice_rust"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
malachite = "0.3.2"
malachite-nz = { version = "0.3.2", features = ["enable_serde"] }
openssl = { version = "*", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"